# awpy

./: .buildinfo  .gitattributes  .gitignore  .golangci.yaml  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RELEASE_NOTES.md  _typos.toml  analytics.html  cloudbuild.yaml  data.html  examples.html  faq.html  genindex.html  index.html  installation.html  license.html  map_coords.json  objects.inv  parser.html  parser_output.html  plot_tiles.py  projects.html  py-modindex.html  pyproject.toml  requirements.txt  run_tests.sh  search.html  searchindex.js  setup.cfg  setup.py  test_demo_parse.py  visualization.html  y_intermediate_0.npy
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/tmp/: build.yml  docs.yml
.github/workflows/: artifacts.yml  build-package.yml  build.yml  codeql-analysis.yml  docs.yml  go_code.yml  release-test.yml  release.yml  source-artifacts.yml
_modules/: index.html
_modules/awpy/analytics/: nav.html  states.html  stats.html  wpa.html
_modules/awpy/parser/: cleaning.html  demoparser.html
_modules/awpy/visualization/: plot.html
_modules/csgo/analytics/: nav.html  states.html  stats.html  wpa.html
_modules/csgo/parser/: cleaning.html  demoparser.html
_modules/csgo/visualization/: plot.html
_sources/: analytics.rst.txt  data.rst.txt  faq.rst.txt  index.rst.txt  parser.rst.txt  parser_output.rst.txt  projects.rst.txt
_static/: documentation_options.js
awpy/: __init__.py  cli.py  constants.py  converters.py  demo.py  nav.py  parsers.py  spawn.py  types.py  utils.py  vector.py  vis.py  visibility.py
awpy/analytics/: __init__.py  adr.py  kast.py  map_control.py  nav.py  states.py  stats.py  wpa.json  wpa.py
awpy/data/: __init__.py  map_data.py  usd.py  usd_data.py  utils.py  winprob_data.py
awpy/data/map/: README.md  map_data.json
awpy/data/maps/: __init__.py  map_data.json
awpy/data/nav/: area_dist_matrix.json  cs_assault.txt  cs_italy.txt  cs_militia.txt  cs_office.txt  de_ancient.csv  de_ancient.txt  de_anubis.txt  de_bank.txt  de_cache.csv  de_cache.txt  de_canals.txt  de_cbble.csv  de_cbble.txt  de_dust2.txt  de_grind.txt  de_inferno.csv  de_inferno.txt  de_lake.txt  de_mirage.csv  de_mirage.txt  de_mocha.txt  de_nuke.csv  de_nuke.txt  de_overpass.txt  de_safehouse.txt  de_shortdust.txt  de_shortnuke.txt  de_stmarc.txt  de_sugarcane.txt  de_train.csv  (+14 more)
awpy/parser/: __init__.py  bomb.py  cleaning.py  damage.py  demoparser.py  frame.py  go.mod  go.sum  grenade.py  header.py  parse_demo.go  parse_demo_test.go  round.py  weapon.py
awpy/parsers/: __init__.py  bomb.py  clock.py  events.py  grenades.py  rounds.py  ticks.py  utils.py
awpy/plot/: __init__.py  nav.py  plot.py  tile.py  tile_viz_utils.py  utils.py
awpy/stats/: __init__.py  adr.py  box.py  kast.py  rating.py  train_model.py  utils.py  win_prob.py
awpy/vis/: __init__.py  plot.py  utils.py
awpy/visualization/: __init__.py  plot.py
awpy/viz/: plot.py
csgo/: __init__.py  base.py  entities.py  events.py  map_coords.json  utils.py
csgo/analytics/: coords.py  coords_to_area.go  distance.py  distance_bombsite.go  format_position.go  go.mod  go.sum  nav.py  path_distance.go  path_distance_area.go  states.py  stats.py  utils.py
csgo/data/: __init__.py
csgo/parser/: __init__.py  cleaning.py  demoparser.py  demoparser_old.py  entry.py  frameparser.py  game_parser.py  go.mod  go.sum  graph.py  match_parser.py  matchparser.py  parse_demo.go  parse_demo.py  parse_demofile.go  parse_frames.go  parser.py  preprocess.py  states.py  wrapper.c  wrapper.go
csgo/visualization/: __init__.py  plot.py
data/original_nav_files/: de_inferno.nav  de_mirage.nav  de_nuke.nav  de_overpass.nav
docs/: Makefile  README.md  analytics.rst  cli.rst  conf.py  data.md  data.rst  demo_cleaning.md  demofiles.md  examples.rst  faq.rst  index.html  index.rst  installation.rst  license.rst  parser.md  parser.rst  parser_output.rst  parser_workflow.drawio  plot.rst  projects.md  projects.rst  stats.rst  usd.rst  vis.rst  visualization.md  visualization.rst
docs/_static/: awpy_example.gif:Zone.Identifier
docs/doctrees/: environment.pickle  index.doctree  parsing.doctree
docs/examples/: demo_stats.ipynb  index.rst  map_data.ipynb  parse_demo.ipynb  parse_demo_cli.ipynb  plot_demo.ipynb  visibility.ipynb  win_prob.ipynb
docs/getting-started/: faq.rst  installation.rst  license.rst
docs/html/: .buildinfo  genindex.html  index.html  objects.inv  parsing.html  py-modindex.html  search.html  searchindex.js
docs/modules/: cli.rst  data.rst  demo.rst  nav.rst  parser_output.rst  plot.rst  stats.rst  vis.rst  visibility.rst
docs/source/: conf.py  index.rst
examples/: 00_Parsing_a_CS2_Demofile.ipynb  00_Parsing_a_CSGO_Demofile.ipynb  00_Parsing_a_CSGO_demofile.ipynb  01_Basic_CSGO_Analysis.ipynb  01_Basic_statistical_analysis.ipynb  01_Parsing_A_Demofile.ipynb  02_Basic_CSGO_Visualization.ipynb  02_Generating_game_frames.ipynb  02_Plotting_Trajectories.ipynb  03_Working_with_Navigation_Meshes.ipynb  05_Map_Control_Calculations_And_Visualizations.ipynb  README.md
old_tests/: __init__.py  test_data.json  test_data_imports.py  test_map_control.py  test_states.py  test_stats.py  test_utils.py  test_vis.py
scripts/: generate-map-data.ps1  generate-map-images.ps1  generate-map-spawns.ps1  generate-maps.ps1  generate-nav.ps1  generate-navs.ps1  generate-spawns.ps1  generate-tris.ps1  update-latest-patch.ps1
tests/: __init__.py  avant-vs-formidable-dust2.dem  conftest.py  de_dust2.json  natus-vincere-vs-astralis-m1-dust2.dem  requirements.txt  test_analytics.py  test_cleaning.py  test_cli.py  test_converters.py  test_coords.py  test_csgo.py  test_data.json  test_data_imports.py  test_demo.py  test_demo_parse.py  test_demo_parser.py  test_frame_parser.py  test_game_parser.py  test_graph.py  test_map_control.py  test_match_parser.py  test_nav.py  test_parse.py  test_parser.py  test_parsers.py  test_states.py  test_stats.py  test_types.py  test_utils.py  test_vis.py  test_visibility.py  test_win_prob.py  test_wpa.py
(+75 files in other folders)
