[project]
name = "awpy"
version = "2.0.2"
description = "Counter-Strike 2 demo parsing, analysis and visualization"
readme = "README.md"
authors = [
    { name = "Peter Xenopoulos", email = "pnxenopoulos@gmail.com" }
]
keywords = ["counter-strike 2", "counter-strike", "counter strike 2", "counter strike", "cs2", "csgo", "esports", "sports-analytics"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
    "Topic :: Games/Entertainment :: First Person Shooters",
    "Topic :: Scientific/Engineering :: Information Analysis"
]
requires-python = ">=3.11,<3.14"
dependencies = [
    "click>=8.1.8",
    "demoparser2>=0.38.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.0",
    "networkx>=3.4.2",
    "numpy>=2.0.0",
    "pillow>=11.1.0",
    "polars>=1.22.0",
    "requests>=2.32.3",
    "scipy>=1.15.0",
    "tqdm>=4.67.1",
]

[project.urls]
Homepage   = "https://awpycs.com"
Repository = "https://github.com/pnxenopoulos/awpy"
Docs       = "https://awpy.readthedocs.io/en/latest/?badge=latest"

[project.scripts]
awpy = "awpy.cli:awpy_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.1.0",
    "ruff>=0.9.6",
    "vdf>=3.4",
]
test = [
    "coverage>=7.6.12",
    "pytest>=8.3.4",
]
docs = [
    "ipykernel>=6.29.5",
    "nbsphinx>=0.9.6",
    "sphinx>=8.1.3",
    "sphinx-rtd-theme>=3.0.2",
]

# Test & Coverage config
[tool.coverage.run]
branch = true
source = ["awpy"]

[tool.pytest.ini_options]
testpaths = ["tests"]

# Setuptools
[tool.setuptools]
include-package-data = true
packages = ["awpy"]

# Ruff config
[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "docs"
]
line-length = 120

[tool.ruff.lint]
select = [
    "E",
    "F",
    "B",
    "W",
    "I",
    "N",
    "D",
    "UP",
    "YTT",
    "ANN",
    "S",
    "BLE",
    "FBT",
    "A",
    "C4",
    "DTZ",
    "T10",
    "EXE",
    "ISC",
    "ICN",
    "G",
    "INP",
    "PIE",
    "PYI",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SIM",
    "TID",
    "TCH",
    "ARG",
    "ERA",
    "PD",
    "PGH",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "TRY",
    "NPY",
    "RUF",
    "EM"
]
ignore = ["D208", "T20", "PTH", "TRY003", "BLE001", "PLR2004", "UP007", "ISC001"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 17

[tool.ruff.lint.per-file-ignores]
"__init__.py"              = ["E402", "F401"]
"tests/test_*.py"          = ["ANN201", "S101", "SLF001", "PLR2004"]
